--- a/publications/index.html
+++ b/publications/index.html
@@ -99,7 +99,7 @@
 		</div>
 		<br>
 		<div class="jornal-name">
-			<i> IEEE Conference on Computer Communications (INFOCOM) / 2025 </i>
+			<i> IEEE Conference on Computer Communications (INFOCOM) / May 2025 </i>
 		</div>
 	</div>
 	<hr width="50%">
@@ -115,7 +115,7 @@
 		</div>
 		<br>
 		<div class="jornal-name">
-			<i> IEEE Conference on Computer Communications (INFOCOM) / 2022 </i>
+			<i> IEEE Conference on Computer Communications (INFOCOM) / May 2022 </i>
 		</div>
 	</div>
 	<hr width="50%">
@@ -131,7 +131,7 @@
 		</div>
 		<br>
 		<div class="jornal-name">
-			<i> International Conference on Parallel Architectures and Compilation Techniques (PACT) / 2021 </i>
+			<i> International Conference on Parallel Architectures and Compilation Techniques (PACT) / Sep. 2021 </i>
 		</div>
 	</div>
 	<hr width="50%">	
@@ -147,7 +147,7 @@
 		</div>
 		<br>
 		<div class="jornal-name">
-			<i> IEEE International Symposium on High-Performance Computer Architecture (HPCA) / 2021 </i>
+			<i> IEEE International Symposium on High-Performance Computer Architecture (HPCA) / Feb. 2021 </i>
 		</div>
 	</div>
 	<hr width="50%">
@@ -163,7 +163,7 @@
 		</div>
 		<br>
 		<div class="jornal-name">
-			<i> Proceedings of the 56th Annual Design Automation Conference (DAC) / 2019 </i>
+			<i> Proceedings of the 56th Annual Design Automation Conference (DAC) / Jun. 2019 </i>
 		</div>
 	</div>
 	<hr width="50%">
@@ -179,7 +179,7 @@
 		</div>
 		<br>
 		<div class="jornal-name">
-			<i> IEEE International Conference on Distributed Computing Systems (ICDCS) / 2015 </i>
+			<i> IEEE International Conference on Distributed Computing Systems (ICDCS) / Jun. 2015 </i>
 		</div>
 	</div>
 	<hr width="50%">
@@ -195,13 +195,47 @@
 		</div>
 		<br>
 		<div class="jornal-name">
-			<i> IEEE Conference on Computer Communications (INFOCOM) / 2015 </i>
+			<i> IEEE Conference on Computer Communications (INFOCOM) / Apr. 2015 </i>
 		</div>
 	</div>
 		
 	
 	<h2 class="h2-header"> Top Journals </h2>
 	<hr width="100%">
+
+	<div class="publication"> 
+		<div>
+			<div class="paper-title">
+				<b> Sensify: A Learning-Based Budget-Aware Task Assignment in Mobile Crowdsensing </b>
+			</div>
+			<div class="paper-icon">
+				<a href="https://doi.org/10.1109/TNSM.2025.3597953" target="_blank">  <i class="fas fa-university"></i> </a>
+				
+			</div>
+		</div>
+		<br>
+		<div class="jornal-name">
+			<i> IEEE Transactions on Network and Service Management / Aug. 2025 </i>
+		</div>
+	</div>
+	<hr width="50%">
+
+	<div class="publication"> 
+		<div>
+			<div class="paper-title">
+				<b> Beamforming and Reflection Design for Short Packet ISAC With Non-Ideal RIS: An A3C-Based Approach </b>
+			</div>
+			<div class="paper-icon">
+				<a href="https://doi.org/10.1109/TVT.2025.3525525" target="_blank">  <i class="fas fa-university"></i> </a>
+				
+			</div>
+		</div>
+		<br>
+		<div class="jornal-name">
+			<i> IEEE Transactions on Vehicular Technology / May 2025 </i>
+		</div>
+	</div>
+	<hr width="50%">
 	
 	<div class="publication"> 
 		<div>
@@ -215,7 +249,7 @@
 		</div>
 		<br>
 		<div class="jornal-name">
-			<i> IEEE Transactions on Computational Social Systems / 2024 </i>
+			<i> IEEE Transactions on Computational Social Systems / May 2024 </i>
 		</div>
 	</div>
 	<hr width="50%">		
@@ -232,7 +266,7 @@
 		</div>
 		<br>
 		<div class="jornal-name">
-			<i> IEEE Transactions on Services Computing / 2024 </i>
+			<i> IEEE Transactions on Services Computing / Jan. 2024 </i>
 		</div>
 	</div>
 	<hr width="50%">	
@@ -249,7 +283,7 @@
 		</div>
 		<br>
 		<div class="jornal-name">
-			<i> IEEE Transactions on Communications / 2024 </i>
+			<i> IEEE Transactions on Communications / Jan. 2024 </i>
 		</div>
 	</div>
 	<hr width="50%">
@@ -265,7 +299,7 @@
 		</div>
 		<br>
 		<div class="jornal-name">
-			<i> IEEE Transactions on Industrial Informatics / 2023 </i>
+			<i> IEEE Transactions on Industrial Informatics / Jun. 2023 </i>
 		</div>
 	</div>
 	<hr width="50%">
@@ -281,7 +315,7 @@
 		</div>
 		<br>
 		<div class="jornal-name">
-			<i> IEEE Transactions on Computer-Aided Design of Integrated Circuits and Systems / 2023 </i>
+			<i> IEEE Transactions on Computer-Aided Design of Integrated Circuits and Systems / Mar. 2023 </i>
 		</div>
 	</div>
 	<hr width="50%">
@@ -297,7 +331,7 @@
 		</div>
 		<br>
 		<div class="jornal-name">
-			<i> ACM Computing Surveys / 2022 </i>
+			<i> ACM Computing Surveys / Nov. 2022 </i>
 		</div>
 	</div>
 	<hr width="50%">
@@ -313,7 +347,7 @@
 		</div>
 		<br>
 		<div class="jornal-name">
-			<i> IEEE Transactions on Network and Service Management / 2022 </i>
+			<i> IEEE Transactions on Network and Service Management / Oct. 2022 </i>
 		</div>
 	</div>
 	<hr width="50%">
@@ -329,23 +363,7 @@
 		</div>
 		<br>
 		<div class="jornal-name">
-			<i> IEEE Transactions on Knowledge and Data Engineering / 2022 </i>
-		</div>
-	</div>
-	<hr width="50%">
-	
-	<div class="publication"> 
-		<div>
-			<div class="paper-title">
-				<b> Minimizing Update Makespan in SDNs without TCAM Overhead </b>
-			</div>
-			<div class="paper-icon">
-				<a href="https://doi.org/10.1109/TNSM.2022.3146971" target="_blank">  <i class="fas fa-university"></i> </a>
-			</div>
-		</div>
-		<br>
-		<div class="jornal-name">
-			<i> IEEE Transactions on Network and Service Management / 2022 </i>
+			<i> IEEE Transactions on Knowledge and Data Engineering / Sep. 2022 </i>
 		</div>
 	</div>
 	<hr width="50%">
@@ -361,11 +379,27 @@
 		</div>
 		<br>
 		<div class="jornal-name">
-			<i> IEEE Transactions on Network and Service Management / 2022 </i>
+			<i> IEEE Transactions on Network and Service Management / Feb. 2022 </i>
+		</div>
+	</div>
+	<hr width="50%">	
+	
+	<div class="publication"> 
+		<div>
+			<div class="paper-title">
+				<b> Minimizing Update Makespan in SDNs without TCAM Overhead </b>
+			</div>
+			<div class="paper-icon">
+				<a href="https://doi.org/10.1109/TNSM.2022.3146971" target="_blank">  <i class="fas fa-university"></i> </a>
+			</div>
+		</div>
+		<br>
+		<div class="jornal-name">
+			<i> IEEE Transactions on Network and Service Management / Jan. 2022 </i>
 		</div>
 	</div>
 	<hr width="50%">
-
+	
 		<div class="publication"> 
 		<div>
 			<div class="paper-title">
@@ -377,7 +411,7 @@
 		</div>
 		<br>
 		<div class="jornal-name">
-			<i> IEEE Transactions on Computers / 2022 </i>
+			<i> IEEE Transactions on Computers / Jan. 2022 </i>
 		</div>
 	</div>
 	<hr width="50%">
@@ -393,7 +427,7 @@
 		</div>
 		<br>
 		<div class="jornal-name">
-			<i> IEEE Transactions on Vehicular Technology / 2020 </i>
+			<i> IEEE Transactions on Vehicular Technology / Oct. 2020 </i>
 		</div>
 	</div>
 	<hr width="50%">
@@ -409,7 +443,7 @@
 		</div>
 		<br>
 		<div class="jornal-name">
-			<i> IEEE Transactions on Computers / 2017 </i>
+			<i> IEEE Transactions on Computers / Jun. 2017 </i>
 		</div>
 	</div>
 	<hr width="50%">
@@ -425,7 +459,7 @@
 		</div>
 		<br>
 		<div class="jornal-name">
-			<i> IEEE Transactions on Multimedia / 2017 </i>
+			<i> IEEE Transactions on Multimedia / Jun. 2017 </i>
 		</div>
 	</div>
 	<hr width="50%">
@@ -441,7 +475,7 @@
 		</div>
 		<br>
 		<div class="jornal-name">
-			<i> IEEE Transactions on Control of Network Systems / 2017 </i>
+			<i> IEEE Transactions on Control of Network Systems / Mar. 2017 </i>
 		</div>
 	</div>
 	<hr width="50%">
@@ -457,7 +491,7 @@
 		</div>
 		<br>
 		<div class="jornal-name">
-			<i> IEEE Transactions on Information Forensics and Security / 2016 </i>
+			<i> IEEE Transactions on Information Forensics and Security / Jan. 2016 </i>
 		</div>
 	</div>
 	<hr width="50%">
@@ -473,7 +507,7 @@
 		</div>
 		<br>
 		<div class="jornal-name">
-			<i> IEEE Transactions on Wireless Communications / 2013 </i>
+			<i> IEEE Transactions on Wireless Communications / Jan. 2013 </i>
 		</div>
 	</div>
 
