--- a/publications/index.html
+++ b/publications/index.html
@@ -94,7 +94,7 @@
 				<b> ALPHAS: Adaptive Bitrate Ladder Optimization for Multi-Live Video Streaming </b>
 			</div>
 			<div class="paper-icon">
-				<a href="https://ieeexplore.ieee.org/document/11044484" target="_blank">  <i class="fas fa-university"></i> </a>
+				<a href="https://doi.org/10.1109/INFOCOM55648.2025.11044484" target="_blank">  <i class="fas fa-university"></i> </a>
 			</div>
 		</div>
 		<br>
