--- a/alumni/index.html
+++ b/alumni/index.html
@@ -291,7 +291,12 @@
                 <div class="image--cover-container">
 						<img src="/images/alumni/hadi_foroughi.jpg" class="image--cover">
                     <p>Mohammad Hadi Foroughi</p>
-                </div>				
+                </div>
+
+                <div class="image--cover-container">
+						<img src="/images/alumni/mahan_osouli.jpg" class="image--cover">
+                    <p>Mahan Osouli</p>
+                </div>					
 				
             </div>		
         </div>	
