--- a/alumni/index.html
+++ b/alumni/index.html
@@ -296,6 +296,16 @@
                 <div class="image--cover-container">
 						<img src="/images/alumni/mahan_osouli.jpg" class="image--cover">
                     <p>Mahan Osouli</p>
+                </div>
+
+                <div class="image--cover-container">
+						<img src="/images/alumni/amir_amin.jpg" class="image--cover">
+                    <p>Amir Amin</p>
+                </div>		
+
+                <div class="image--cover-container">
+						<img src="/images/alumni/meysam_safari.png" class="image--cover">
+                    <p>Meysam Safari</p>
                 </div>					
 				
             </div>		
