--- a/alumni/index.html
+++ b/alumni/index.html
@@ -306,6 +306,16 @@
                 <div class="image--cover-container">
 						<img src="/images/alumni/meysam_safari.png" class="image--cover">
                     <p>Meysam Safari</p>
+                </div>
+
+                <div class="image--cover-container">
+						<img src="/images/alumni/default.png" class="image--cover">
+                    <p>Majid Baghi</p>
+                </div>	
+
+                <div class="image--cover-container">
+						<img src="/images/alumni/default.png" class="image--cover">
+                    <p>Keyvan Rezazade</p>
                 </div>					
 				
             </div>		
