--- a/people/ahmad-khonsari.html
+++ b/people/ahmad-khonsari.html
@@ -89,7 +89,7 @@
                      <div class="text-center mt-5">
                         <img src="/images/people/ak.jpg" class="avatar">
                         <h1>Ahmad Khonsari</h1>
-                        <h3>Associate Professor</h3>
+                        <h3>Professor</h3>
                         <h6>a_khonsari[at]ut[dot]ac[dot]ir</h6>
                         <ul class="list-inline list-unstyled">
                            <li class="list-inline-item"><a target="blank" href="https://ece.ut.ac.ir/en/~a_khonsari"><i class="fab fa-internet-explorer"></i></a></li>						
