--- a/alumni/index.html
+++ b/alumni/index.html
@@ -184,7 +184,7 @@
             <div class="profile-pic-gallary ">
                 
                 <div class="image--cover-container">
-					<a href="https://areshdadlani.droppages.com/" target="_blank">												
+					<a href="https://a-dadlani.github.io" target="_blank">												
 						<img src="/images/alumni/aresh_dadlani.jpg" class="image--cover">
                     <p>Aresh Dadlani</p>
 					</a>					
