edit useful reads

--- a/useful-reads/research-highlight-notes.html
+++ b/useful-reads/research-highlight-notes.html
@@ -102,6 +102,8 @@
 
 <p>#8 Did you perform fair performance comparison? (did you implement the previous studies yourself and then you compare all methods with one performance tool?).</p>
 
+<p>Note: Comprehensive Research Program Title (in Persian): طراحی، مدل‌سازی، پیاده‌سازی و ارزیابی سیستم‌های نرم‌افزاری </p>
+
   </div>
       </div>
     </div>
