--- a/people/ahmad-khonsari.html
+++ b/people/ahmad-khonsari.html
@@ -96,7 +96,8 @@
                            <li class="list-inline-item"><a target="blank" href="https://www.linkedin.com/in/ahmad-khonsari-39684777/"><i class="fab fa-linkedin"></i></a></li>
                            <li class="list-inline-item"><a target="blank" href="https://scholar.google.com/citations?user=Xfvk1SoAAAAJ&hl=en"><i class="fab fa-google"></i></a></li>
                            <li class="list-inline-item"><a target="blank" href="https://www.researchgate.net/profile/Ahmad-Khonsari"><i class="fab fa-researchgate"></i></a></li>
-                           <li class="list-inline-item"><a target="blank" href="https://orcid.org/0000-0002-8669-4001"><i class="fab fa-orcid"></i></a></li>						   
+                           <li class="list-inline-item"><a target="blank" href="https://ieeexplore.ieee.org/author/37269422900"><i class="ai ai-ieee"></i></a></li>						   
+                           <li class="list-inline-item"><a target="blank" href="https://orcid.org/0000-0002-8669-4001"><i class="fab fa-orcid"></i></a></li>						   						   
                            <li class="list-inline-item"><a target="blank" href="https://dblp.org/pid/96/4551.html"><i class="ai ai-dblp" style="font-size:1.4rem"></i></a></li>						   						   
                         </ul>
                      </div>
