--- a/publications/index.html
+++ b/publications/index.html
@@ -206,6 +206,40 @@
 	<div class="publication"> 
 		<div>
 			<div class="paper-title">
+				<b> URLLC Service for Stacked Intelligent Metasurface-Assisted RSMA Systems </b>
+			</div>
+			<div class="paper-icon">
+				<a href="https://doi.org/10.1109/TVT.2026.3663408" target="_blank">  <i class="fas fa-university"></i> </a>
+				
+			</div>
+		</div>
+		<br>
+		<div class="jornal-name">
+			<i> IEEE Transactions on Vehicular Technology / Feb. 2026 </i>
+		</div>
+	</div>
+	<hr width="50%">
+	
+	<div class="publication"> 
+		<div>
+			<div class="paper-title">
+				<b> A Novel Stochastic Fuzzy Epidemic Model With Cognitive Awareness and Reactive Dynamics </b>
+			</div>
+			<div class="paper-icon">
+				<a href="https://doi.org/10.1109/TCSS.2025.3642944" target="_blank">  <i class="fas fa-university"></i> </a>
+				
+			</div>
+		</div>
+		<br>
+		<div class="jornal-name">
+			<i> IEEE Transactions on Computational Social Systems / Jan. 2026 </i>
+		</div>
+	</div>
+	<hr width="50%">	
+
+	<div class="publication"> 
+		<div>
+			<div class="paper-title">
 				<b> Sensify: A Learning-Based Budget-Aware Task Assignment in Mobile Crowdsensing </b>
 			</div>
 			<div class="paper-icon">
